--- a/index.html
+++ b/index.html
@@ -71,20 +71,19 @@
         <div class="section-title">
           <h2>About</h2>
           <p>🤔   Exploring new technologies and developing software solutions to our worlds tech problems.<br/>
-            🎓   Studying Software Engineering at SAFFRONY INSTITUTE OF TECHNOLOGY.</p>
+            🎓   Studying Software Engineering.</p>
         </div>
 
-        <div class="row">
+        <div class="row" >
           <div class="col-lg-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
-            <!-- <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p> -->
-            <div class="row">
+            <h3>App Developer &amp; Web Developer.</h3>
+            <p class="fst-italic">
+
+            </p>
+            <div class="row" style="margin-top:85px ;">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 May 2001</span></li>
