--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <ul>
                 <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                 <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+                <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-book"></i> <span>Skills</span></a></li>
                 <li><a href="#internship" class="nav-link scrollto"><i class="bx bx-laptop"></i> <span>Internship</span></a></li>
                 <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                 <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -197,7 +198,7 @@
 
         <!-- ======= About Section ======= -->
         <!-- ======= Resume Section ======= -->
-        <section id="internship" class="internship">
+        <section id="internship" class="resume">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
@@ -206,8 +207,8 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 class="internship-title">Internship</h3>
-                        <div class="internship-item">
+                        <h3 class="resume-title">Internship</h3>
+                        <div class="resume-item">
                             <h4>Adore India</h4>
                             <h5>Web Development </h5><br>
                             <h5>May 6 - August 22 (2021)</h5>
